@@ -1,6 +1,7 @@
 2.1
 
 * Add ability to disable any build configuration
+* Support gradle wrapper execution for gradle projects including it
 
 * Fix importing of child modules in large maven projects
 * Resolve issue with exceptions adding issues with very long summaries - Issue:104
